--- a/scratch.html
+++ b/scratch.html
@@ -111,6 +111,6 @@
   scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
   vizElement.parentNode.insertBefore(scriptElement, vizElement);
 </script>
-<p><a href="index.html">← View Professional Site</a></p>
+<p><a href="../index.html">← View Professional Site</a></p>
 </body>
 </html>
